--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
+    "react-icons": "^3.8.0",
+    "react-slick": "^0.25.2",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^4.4.1"
   },
   "devDependencies": {
